# rules_nodejs

./: .bazelrc  index.bzl  package.json
e2e/ts_devserver/: package.json
internal/linker/: link_node_modules.bzl
internal/node/: launcher.sh  node.bzl  node_patches.js  npm_package_bin.bzl  require_patch.js
internal/npm_install/: BUILD.bazel  install_package.js  install_package.ts  npm_repository.bzl  npm_repository.js  npm_repository.ts  tsconfig.json  webpack.config.js
internal/providers/: node_runtime_deps_info.bzl  npm_package_info.bzl
