load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

# BEGIN-INTERNAL
# avoid leaking a ts dependency
load("@npm_bazel_typescript//:checked_in_ts_project.bzl", "checked_in_ts_project")
load("@npm_bazel_typescript//:webpack_bundle.bzl", "webpack_bundle")

# using checked in ts library like the linker
checked_in_ts_project(
    name = "compile_generate_build_file",
    src = "generate_build_file.ts",
    checked_in_js = "index.js",
    visibility = ["//internal/npm_install:__subpackages__"],
    deps = ["@npm//@types/node"],
)

webpack_bundle(
    name = "npm_repository",
    src = "npm_repository.ts",
    data = [
        "@npm//semver",
    ],
    tsconfig = ":tsconfig.json",
    webpack_config = ":webpack.config.js",
)

webpack_bundle(
    name = "install_package",
    src = "install_package.ts",
    data = [
        "@npm//request-promise",
        "@npm//ssri",
        "@npm//tar",
    ],
    tsconfig = ":tsconfig.json",
    webpack_config = ":webpack.config.js",
)

# END-INTERNAL

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

# Exported to be consumed for generating stardoc.
exports_files(["npm_install.bzl"])

filegroup(
    name = "generate_build_file",
    srcs = [
        "index.js",
    ],
    visibility = ["//internal:__subpackages__"],
)

filegroup(
    name = "package_contents",
    srcs = glob(
        include = ["*"],
        exclude = ["test"],
    ),
    visibility = ["//:__pkg__"],
)

nodejs_binary(
    name = "browserify-wrapped",
    data = [
        "//third_party/npm/node_modules/@babel/core",
        "//third_party/npm/node_modules/@babel/plugin-transform-modules-commonjs",
        "//third_party/npm/node_modules/babelify",
        "//third_party/npm/node_modules/base64-js",
        "//third_party/npm/node_modules/browserify",
        "//third_party/npm/node_modules/ieee754",
        "//third_party/npm/node_modules/named-amd",
    ],
    entry_point = ":browserify-wrapped.js",
    install_source_map_support = False,
    visibility = ["//visibility:public"],
)
